tdf#145603 Drag-n-drop in formula bar creates mismatch

Revert
    commit 60d35f767781de4b8f1e7b264b12015f655c647d
    tdf#132740 don't broadcast if modified status has not changed

Change-Id: I5a0292499522e21708a2d5607966e4c2b3a18ba0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135301
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 0030fa0d5174b45ae7f99e3ae923bbec83e50cd1)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/135264
Reviewed-by: Caolán McNamara <caolanm@redhat.com>