editeng/source/editeng/editdoc.cxx
@@ -2216,8 +2216,6 @@ void EditDoc::ClearSpellErrors()
 
 void EditDoc::SetModified( bool b )
 {
-    if (bModified == b)
-        return;
     bModified = b;
     if ( bModified )
     {
